+++++++++++
Python News
+++++++++++

What's New in Python 3.3.2?
===========================

*Release date: XXXX-XX-XX*

*Not yet released, see sections below for changes released in 3.3.0*

Core and Builtins
-----------------

Library
-------

- Issue #17526: fix an IndexError raised while passing code without filename to
  inspect.findsource().  Initial patch by Tyler Doyle.


What's New in Python 3.3.1?
===========================

*Release date: 07-Apr-2013*

Core and Builtins
-----------------

- Issue #17328: Fix possible refleak in dict.setdefault.

- Issue #17223: array module: Fix a crasher when converting an array containing
  invalid characters (outside range [U+0000; U+10ffff]) to Unicode:
  repr(array), str(array) and array.tounicode(). Patch written by Manuel Jacob.

- Issue #17223: Fix PyUnicode_FromUnicode() for string of 1 character outside
  the range U+0000-U+10ffff.

- Issue #1692335: Move initial args assignment to
  BaseException.__new__ to help pickling of naive subclasses.

- Issue #17275: Corrected class name in init error messages of the C version of
  BufferedWriter and BufferedRandom.

- Issue #7963: Fixed misleading error message that issued when object is
  called without arguments.

- Issue #5308: Raise ValueError when marshalling too large object (a sequence
  with size >= 2**31), instead of producing illegal marshal data.

- Issue #12983: Bytes literals with invalid \x escape now raise a SyntaxError
  and a full traceback including line number.

- Issue #17173: Remove uses of locale-dependent C functions (isalpha() etc.)
  in the interpreter.

- Issue #17137: When an Unicode string is resized, the internal wide character
  string (wstr) format is now cleared.

- Issue #17043: The unicode-internal decoder no longer read past the end of
  input buffer.

- Issue #17098: All modules now have __loader__ set even if they pre-exist the
  bootstrapping of importlib.
